kubernetes/sonarqube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: lab03
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      nodeSelector:
        dedicated: sonar
      tolerations:
        - key: dedicated
          operator: Equal
          value: sonar
          effect: NoSchedule
      containers:
        - name: sonarqube
          image: sonarqube:26.6.0.123539-community
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: sonarqube-data
              mountPath: /opt/sonarqube/data
            - name: sonarqube-data
              mountPath: /opt/sonarqube/extensions
            - name: sonarqube-data
              mountPath: /opt/sonarqube/logs
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 90
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 180
            periodSeconds: 20
          resources:
            requests:
              cpu: "750m"
              memory: "2Gi"
            limits:
              cpu: "1500m"
              memory: "3Gi"
      volumes:
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-pvc
